--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
   "name": "react-native-apple-ads-attribution",
-  "version": "1.0.2",
+  "version": "1.0.2-1",
   "description": "Reads Apple Search Ads Attribution API in iOS",
   "main": "index.js",
   "repository": {
